# MailMonkey

./: .gitignore  BuildMasterCampaignList_v4_MAILZIPFirst.py  LICENSE  MailCampaigns_README.txt  README.md  README_Envelopes.md  build_campaign_timegap.py  direct_mail_batch_por_POR_KEEP_FIXINDENT.py  generate_envelopes_from_master.py  pyproject.toml
Campaign_1_Aug2025/: campaign_master.csv  executed_campaign_log.csv  postage_estimate.csv  presort_report.csv  presort_zip3_summary.csv
MasterCampaignTracker/: MasterPropertyCampaignTracker.csv  Zip5_LetterTally.csv
OlderFiles/: BuildMasterCampaignList.py  BuildMasterCampaignList_FIXED.py  BuildMasterCampaignList_V4.py  BuildMasterCampaignList_v2_DEBUG.py  BuildMasterCampaignList_v2_DEBUG_ZIPFIX.py  BuildMasterCampaignList_v3_ShortTestSchema.py  BuildMasterCampaignList_v4_MAILZIPFirst_TIMEGAP.py  BuildMasterCampaignList_v4_ShortTestDefault_oldworking_counterfileissue.py  FinalizeCampaign.py  FinalizeCampaign_FINAL.py  FinalizeCampaign_FINAL_fix1.py  FinalizeCampaign_FINAL_fix2_ZIP.py  FinalizeCampaign_FINAL_fix3_ZIPTALLY.py  FinalizeCampaign_SAFE.py  FinalizeCampaign_TRACKER.py  FinalizeCampaign_TRACKER_STRICT.py  FinalizeCampaign_TRACKER_STRICT_v3.py  FinalizeCampaign_TRACKER_STRICT_v3_MAILZIP.py  FinalizeCampaign_TRACKER_STRICT_v4_MAILZIP_SEQTEMPLATE.py  FinalizeCampaign_TRACKER_STRICT_v5_RECOVER.py  FinalizeCampaign_TRACKER_STRICT_v5_RECOVER_fixdate.py  FinalizeCampaign_ZIPFILL_orig.py  SumatraPDF-settings.txt  directMail.py  direct_mail_batch_and_singles.py  direct_mail_batch_and_singles_FIXEDSaved.py  (+21 more)
(+26 files in other folders)
